[gd_scene load_steps=4 format=3 uid="uid://bik0m7c3v0uas"]

[ext_resource type="Script" uid="uid://due1ine3lc0iv" path="res://assets/Aquafulness/Scenes/Aquafulness/control_cross.gd" id="1_1b1m4"]
[ext_resource type="Texture2D" uid="uid://dnm47msg3jkr6" path="res://assets/Aquafulness/ArrowUp.png" id="2_1b1m4"]
[ext_resource type="Texture2D" uid="uid://bhwxtw4b6kian" path="res://assets/Aquafulness/stop.png" id="3_a6sme"]

[node name="ControlCross" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -998.0
offset_bottom = -426.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1b1m4")

[node name="UpButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_right = 50.0
offset_bottom = 93.0
grow_horizontal = 2
action_mode = 0
keep_pressed_outside = true
texture_normal = ExtResource("2_1b1m4")
ignore_texture_size = true
stretch_mode = 4

[node name="LeftButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 47.0
offset_right = 98.123505
offset_bottom = 139.8594
grow_vertical = 2
rotation = -1.5707964
keep_pressed_outside = true
texture_normal = ExtResource("2_1b1m4")
ignore_texture_size = true
stretch_mode = 4

[node name="RightButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -46.0
offset_right = 93.12671
offset_bottom = 46.238495
grow_horizontal = 0
grow_vertical = 2
rotation = 1.5707964
keep_pressed_outside = true
texture_normal = ExtResource("2_1b1m4")
ignore_texture_size = true
stretch_mode = 4

[node name="TurnRightButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -33.0
offset_top = 58.0
offset_right = 26.246704
offset_bottom = 109.70349
grow_horizontal = 0
grow_vertical = 2
rotation = 1.5707964
keep_pressed_outside = true
texture_normal = ExtResource("2_1b1m4")
ignore_texture_size = true
stretch_mode = 4

[node name="TurnLeftButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -243.0
offset_top = 111.0
offset_right = -183.7533
offset_bottom = 162.70349
grow_horizontal = 0
grow_vertical = 2
rotation = -1.5707964
keep_pressed_outside = true
texture_normal = ExtResource("2_1b1m4")
ignore_texture_size = true
stretch_mode = 4

[node name="DownButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 47.0
offset_right = 135.7179
offset_bottom = 88.717896
grow_horizontal = 2
grow_vertical = 0
rotation = 3.1415927
keep_pressed_outside = true
texture_normal = ExtResource("2_1b1m4")
ignore_texture_size = true
stretch_mode = 4

[node name="StopButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.589294
offset_top = -30.5
offset_right = 31.589294
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
keep_pressed_outside = true
texture_normal = ExtResource("3_a6sme")
ignore_texture_size = true
stretch_mode = 4

[connection signal="button_down" from="UpButton" to="." method="_on_up_button_button_down"]
[connection signal="pressed" from="UpButton" to="." method="_on_up_button_pressed"]
[connection signal="toggled" from="UpButton" to="." method="_on_up_button_toggled"]
[connection signal="button_down" from="LeftButton" to="." method="_on_left_button_button_down"]
[connection signal="toggled" from="LeftButton" to="." method="_on_left_button_toggled"]
[connection signal="button_down" from="RightButton" to="." method="_on_right_button_button_down"]
[connection signal="toggled" from="RightButton" to="." method="_on_right_button_toggled"]
[connection signal="button_down" from="TurnRightButton" to="." method="_on_turn_right_button_button_down"]
[connection signal="button_down" from="TurnLeftButton" to="." method="_on_turn_left_button_button_down"]
[connection signal="pressed" from="DownButton" to="." method="_on_down_button_pressed"]
[connection signal="toggled" from="DownButton" to="." method="_on_down_button_toggled"]
[connection signal="pressed" from="StopButton" to="." method="_on_stop_button_pressed"]
